# quera-task

backend/: .dockerignore  Dockerfile  docker-compose.yml  pyproject.toml  web_entrypoint.sh
backend/config/: api_router.py  urls.py
backend/config/settings/: common.py  dev.py  prod.py
backend/form/: admin.py  models.py  tests.py
backend/form/api/: serializers.py  views.py
backend/form/migrations/: 0001_initial.py
backend/google_forms_clone/templates/: 403.html  404.html  500.html
backend/google_forms_clone/users/: admin.py  apps.py
backend/google_forms_clone/users/api/: serializers.py  views.py
backend/google_forms_clone/users/migrations/: 0001_initial.py
backend/nginx/: nginx.conf
frontend/: package-lock.json  package.json
frontend/app/: layout.js  page.js
frontend/app/profile/[username]/: page.js
frontend/components/ui/: toaster.jsx
frontend/utils/: requests.js
