[tool.poetry]
name = "google_forms_clone"
version = "0.1.0"
description = "google forms clone quera task"
authors = ["Mehdi Khademi <mahdikh6@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.6"
gunicorn = "^21.2.0"
drf-spectacular = "^0.27.2"
djangorestframework = "^3.15.1"
dj-database-url = "^2.2.0"
django-cors-headers = "^4.3.1"
django-admin-interface = "^0.28.6"
django-environ = "^0.11.2"
psycopg2 = "^2.9.9"
flower = "^2.0.1"

[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^4.4.2"
whitenoise = "^6.6.0"

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "config.settings.common"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
